--- a/residential.html
+++ b/residential.html
@@ -22,150 +22,89 @@
   </script>
 </head>
 
-<body>
-  <header class="site-header">
-    <div class="container">
-      <nav class="navbar">
-        <a class="brand" href="index.html">
-          <img src="logo-white.png" alt="TK Remodeling logo" />
-          <div class="brand-text">
-            <strong>TK Remodeling</strong>
-            <span>Licensed &amp; Insured General Contractor</span>
-          </div>
-        </a>
+<main class="section">
+  <div class="container">
 
-        <div class="nav-links">
-          <a href="projects.html">Commercial</a>
-          <a href="residential.html" aria-current="page" style="color:#fff;border-bottom-color:rgba(255,255,255,.5);">Residential</a>
-          <a href="restoration.html">Restoration</a>
-          <a href="about.html">About</a>
-          <a class="cta" href="contact.html">Contact</a>
+    <h1>Residential Remodeling</h1>
+    <p class="sub">
+      Structured residential projects delivered with clean execution and disciplined coordination.
+    </p>
+
+    <!-- ================= BASEMENT ================= -->
+    <div class="proj">
+      <div class="proj-head">
+        <div>
+          <h3>Basement Remodel</h3>
+          <p class="proj-meta">Full lower-level build-out and finish</p>
         </div>
-      </nav>
-    </div>
-  </header>
-
-  <main class="section">
-    <div class="container">
-      <h2>Residential Remodel Projects</h2>
-      <p class="sub">
-        High-quality home remodel execution with clean closeout. Residential is a smaller portion of our work, handled with the same coordination and standards as our commercial projects.
-      </p>
-
-      <!-- RESIDENTIAL PROJECT 1 -->
-      <section class="proj">
-        <div class="proj-head">
-          <div>
-            <h3>Full Home Remodel</h3>
-            <p class="proj-meta">Kansas City Metro • Whole-home scope</p>
-          </div>
-          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
-        </div>
-
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
-
-          <div class="slider-track" data-track>
-            <!-- Replace these image paths later -->
-            <img src="assets/projects/resi-home-01-start.jpg" alt="Home remodel start" />
-            <img src="assets/projects/resi-home-02-mid.jpg" alt="Home remodel during construction" />
-            <img src="assets/projects/resi-home-03-finish.jpg" alt="Home remodel finished" />
-          </div>
-
-          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
-        </div>
-
-        <div class="proj-body">
-          <p>
-            Whole-home remodel with coordinated trades, schedule discipline, and a clean finish.
-          </p>
-          <ul class="proj-bullets">
-            <li>Demo + reconfiguration</li>
-            <li>MEP coordination as required</li>
-            <li>Finishes + punch + clean turnover</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- RESIDENTIAL PROJECT 2 -->
-      <section class="proj">
-        <div class="proj-head">
-          <div>
-            <h3>Kitchen &amp; Living Remodel</h3>
-            <p class="proj-meta">Kansas City Metro • Interior renovation</p>
-          </div>
-          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
-        </div>
-
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
-
-          <div class="slider-track" data-track>
-            <img src="assets/projects/resi-kitchen-01-start.jpg" alt="Kitchen remodel start" />
-            <img src="assets/projects/resi-kitchen-02-mid.jpg" alt="Kitchen remodel during construction" />
-            <img src="assets/projects/resi-kitchen-03-finish.jpg" alt="Kitchen remodel finished" />
-          </div>
-
-          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
-        </div>
-
-        <div class="proj-body">
-          <p>
-            Kitchen/living transformation with clean sequencing and careful finish execution.
-          </p>
-          <ul class="proj-bullets">
-            <li>Cabinet/layout coordination</li>
-            <li>Lighting + electrical updates as needed</li>
-            <li>Finish quality + punch closeout</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- RESIDENTIAL PROJECT 3 -->
-      <section class="proj">
-        <div class="proj-head">
-          <div>
-            <h3>Bathroom Remodel</h3>
-            <p class="proj-meta">Kansas City Metro • Bathroom upgrade</p>
-          </div>
-          <a class="btn btn-ghost" href="contact.html">Request a Remodel Consult</a>
-        </div>
-
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" data-prev aria-label="Previous image">‹</button>
-
-          <div class="slider-track" data-track>
-            <img src="assets/projects/resi-bath-01-start.jpg" alt="Bathroom remodel start" />
-            <img src="assets/projects/resi-bath-02-mid.jpg" alt="Bathroom remodel during construction" />
-            <img src="assets/projects/resi-bath-03-finish.jpg" alt="Bathroom remodel finished" />
-          </div>
-
-          <button class="slider-btn next" type="button" data-next aria-label="Next image">›</button>
-        </div>
-
-        <div class="proj-body">
-          <p>
-            Bathroom remodel with coordinated plumbing, waterproofing, and finish details.
-          </p>
-          <ul class="proj-bullets">
-            <li>Demo + prep + waterproofing</li>
-            <li>Plumbing + tile coordination</li>
-            <li>Final punch + clean turnover</li>
-          </ul>
-        </div>
-      </section>
-
-      <div class="card" style="margin-top:24px;">
-        <h3>Want a quote?</h3>
-        <p style="margin:0;color:var(--muted);">
-          Send your city, scope, timeline, and any photos. We’ll respond with next steps.
-        </p>
-        <div style="height:12px;"></div>
-        <a class="btn btn-primary" href="contact.html">Contact TK Remodeling</a>
       </div>
 
+      <div class="slider">
+        <button class="slider-btn prev">&#10094;</button>
+        <div class="slider-track">
+          <img src="assets/projects/resi-basement-01.jpg" alt="Basement remodel 1">
+          <img src="assets/projects/resi-basement-02.jpg" alt="Basement remodel 2">
+          <img src="assets/projects/resi-basement-03.jpg" alt="Basement remodel 3">
+          <img src="assets/projects/resi-basement-04.jpg" alt="Basement remodel 4">
+          <img src="assets/projects/resi-basement-05.jpg" alt="Basement remodel 5">
+          <img src="assets/projects/resi-basement-06.jpg" alt="Basement remodel 6">
+          <img src="assets/projects/resi-basement-07.jpg" alt="Basement remodel 7">
+        </div>
+        <button class="slider-btn next">&#10095;</button>
+      </div>
     </div>
-  </main>
+
+
+    <!-- ================= BATHROOM ================= -->
+    <div class="proj">
+      <div class="proj-head">
+        <div>
+          <h3>Bathroom Remodel</h3>
+          <p class="proj-meta">Custom tile, plumbing rework, finish upgrades</p>
+        </div>
+      </div>
+
+      <div class="slider">
+        <button class="slider-btn prev">&#10094;</button>
+        <div class="slider-track">
+          <img src="assets/projects/resi-bath-01.jpg" alt="Bathroom remodel 1">
+          <img src="assets/projects/resi-bath-02.jpg" alt="Bathroom remodel 2">
+          <img src="assets/projects/resi-bath-03.jpg" alt="Bathroom remodel 3">
+        </div>
+        <button class="slider-btn next">&#10095;</button>
+      </div>
+    </div>
+
+
+    <!-- ================= KITCHEN ================= -->
+    <div class="proj">
+      <div class="proj-head">
+        <div>
+          <h3>Kitchen Remodel</h3>
+          <p class="proj-meta">Cabinetry, layout redesign, appliance integration</p>
+        </div>
+      </div>
+
+      <div class="slider">
+        <button class="slider-btn prev">&#10094;</button>
+        <div class="slider-track">
+          <img src="assets/projects/resi-kitchen-01.jpg" alt="Kitchen remodel 1">
+          <img src="assets/projects/resi-kitchen-02.jpg" alt="Kitchen remodel 2">
+          <img src="assets/projects/resi-kitchen-03.jpg" alt="Kitchen remodel 3">
+          <img src="assets/projects/resi-kitchen-04.jpg" alt="Kitchen remodel 4">
+          <img src="assets/projects/resi-kitchen-05.jpg" alt="Kitchen remodel 5">
+          <img src="assets/projects/resi-kitchen-06.jpg" alt="Kitchen remodel 6">
+          <img src="assets/projects/resi-kitchen-07.jpg" alt="Kitchen remodel 7">
+          <img src="assets/projects/resi-kitchen-08.jpg" alt="Kitchen remodel 8">
+          <img src="assets/projects/resi-kitchen-09.jpg" alt="Kitchen remodel 9">
+          <img src="assets/projects/resi-kitchen-10.jpg" alt="Kitchen remodel 10">
+        </div>
+        <button class="slider-btn next">&#10095;</button>
+      </div>
+    </div>
+
+  </div>
+</main>
 
   <footer class="footer">
     <div class="container">
