--- a/residential.html
+++ b/residential.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div style="padding:10px;background:yellow;font-weight:800;">
+  TEST - NEW RESIDENTIAL FILE IS LIVE
+</div>
+
   <!-- NAV -->
   <header class="site-header">
     <div class="container">
