--- a/residential.html
+++ b/residential.html
@@ -5,22 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Residential Remodeling | TK Remodeling</title>
   <meta name="description" content="Residential remodeling in Greater Kansas City and Johnson County, Kansas. Basements, bathrooms, kitchens — clean execution and disciplined coordination." />
-
-  <!-- IMPORTANT: this must match your file name exactly -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-  <div style="padding:10px;background:yellow;font-weight:800;">
-  TEST - NEW RESIDENTIAL FILE IS LIVE
-</div>
 
-  <!-- NAV -->
+  <!-- HEADER -->
   <header class="site-header">
     <div class="container">
       <nav class="navbar">
-        <a class="brand" href="index.html" aria-label="Go to homepage">
-          <!-- If your logo file is different, update this path -->
+        <a class="brand" href="index.html">
           <img src="logo-white.png" alt="TK Remodeling logo" />
           <div class="brand-text">
             <strong>TK Remodeling</strong>
@@ -44,38 +38,38 @@
     <div class="container">
       <div class="hero">
         <div class="hero-inner">
+
           <div>
             <div class="badge">RESIDENTIAL REMODELING</div>
             <h1>Residential Remodeling, Done Clean.</h1>
             <p class="lede">
-              Structured residential projects delivered with disciplined coordination, clean job sites,
-              and inspection-ready finishes.
+              Structured residential projects delivered with disciplined coordination and clean execution.
             </p>
 
             <div class="hero-actions">
-              <a class="btn btn-primary" href="contact.html">Request a Consultation</a>
-              <a class="btn btn-ghost" href="#work">View Residential Work</a>
+              <a class="btn btn-primary" href="contact.html">Request Consultation</a>
+              <a class="btn btn-ghost" href="#projects">View Projects</a>
             </div>
 
             <p class="detail">
-              Basements • Bathrooms • Kitchens — serving Greater Kansas City and Johnson County, Kansas.
+              Basements • Bathrooms • Kitchens — Serving Greater Kansas City & Johnson County.
             </p>
           </div>
 
           <div class="deliver-card">
-            <h3>What We Deliver</h3>
+            <h3>Residential Focus</h3>
             <ul class="deliver-list">
               <li class="deliver-item">
                 <strong>Basement Remodels</strong>
-                <span>Full build-out, framing, finishes, and layout coordination</span>
+                <span>Full lower-level build-out and finish</span>
               </li>
               <li class="deliver-item">
                 <strong>Bathroom Remodels</strong>
-                <span>Tile, plumbing coordination, waterproofing, and finish upgrades</span>
+                <span>Tile, plumbing, and finish upgrades</span>
               </li>
               <li class="deliver-item">
                 <strong>Kitchen Remodels</strong>
-                <span>Cabinetry, layout updates, appliances, and finish execution</span>
+                <span>Cabinetry, layout redesign, appliance integration</span>
               </li>
             </ul>
           </div>
@@ -85,87 +79,78 @@
     </div>
   </section>
 
-  <!-- CONTENT -->
-  <main id="work" class="section">
+  <!-- PROJECTS -->
+  <main id="projects" class="section">
     <div class="container">
+
       <h2>Residential Projects</h2>
-      <p class="sub">Three common scopes we deliver with clean execution and tight coordination.</p>
+      <p class="sub">Recent residential remodel work.</p>
 
-      <!-- BASEMENT SLIDER -->
-      <section class="proj">
+      <!-- BASEMENT -->
+      <section class="proj" data-slider>
         <div class="proj-head">
-          <div>
-            <h3>Basement Remodel</h3>
-            <p class="proj-meta">Full lower-level build-out and finish</p>
-          </div>
+          <h3>Basement Remodel</h3>
         </div>
 
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" aria-label="Previous slide" data-prev>‹</button>
+        <div class="slider">
+          <button class="slider-btn prev" data-prev>‹</button>
 
           <div class="slider-track" data-track>
-            <!-- Make sure these files exist exactly in assets/projects/ -->
-            <img src="assets/projects/resi-basement-01.jpg" alt="Basement remodel 1">
-            <img src="assets/projects/resi-basement-02.jpg" alt="Basement remodel 2">
-            <img src="assets/projects/resi-basement-03.jpg" alt="Basement remodel 3">
-            <img src="assets/projects/resi-basement-04.jpg" alt="Basement remodel 4">
-            <img src="assets/projects/resi-basement-05.jpg" alt="Basement remodel 5">
-            <img src="assets/projects/resi-basement-06.jpg" alt="Basement remodel 6">
-            <img src="assets/projects/resi-basement-07.jpg" alt="Basement remodel 7">
+            <img src="assets/projects/resi-basement-01.jpg" alt="">
+            <img src="assets/projects/resi-basement-02.jpg" alt="">
+            <img src="assets/projects/resi-basement-03.jpg" alt="">
+            <img src="assets/projects/resi-basement-04.jpg" alt="">
+            <img src="assets/projects/resi-basement-05.jpg" alt="">
+            <img src="assets/projects/resi-basement-06.jpg" alt="">
+            <img src="assets/projects/resi-basement-07.jpg" alt="">
           </div>
 
-          <button class="slider-btn next" type="button" aria-label="Next slide" data-next>›</button>
+          <button class="slider-btn next" data-next>›</button>
         </div>
       </section>
 
-      <!-- BATHROOM SLIDER -->
-      <section class="proj">
+      <!-- BATHROOM -->
+      <section class="proj" data-slider>
         <div class="proj-head">
-          <div>
-            <h3>Bathroom Remodel</h3>
-            <p class="proj-meta">Custom tile, plumbing coordination, finish upgrades</p>
-          </div>
+          <h3>Bathroom Remodel</h3>
         </div>
 
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" aria-label="Previous slide" data-prev>‹</button>
+        <div class="slider">
+          <button class="slider-btn prev" data-prev>‹</button>
 
           <div class="slider-track" data-track>
-            <img src="assets/projects/resi-bath-01.jpg" alt="Bathroom remodel 1">
-            <img src="assets/projects/resi-bath-02.jpg" alt="Bathroom remodel 2">
-            <img src="assets/projects/resi-bath-03.jpg" alt="Bathroom remodel 3">
+            <img src="assets/projects/resi-bath-01.jpg" alt="">
+            <img src="assets/projects/resi-bath-02.jpg" alt="">
+            <img src="assets/projects/resi-bath-03.jpg" alt="">
           </div>
 
-          <button class="slider-btn next" type="button" aria-label="Next slide" data-next>›</button>
+          <button class="slider-btn next" data-next>›</button>
         </div>
       </section>
 
-      <!-- KITCHEN SLIDER -->
-      <section class="proj">
+      <!-- KITCHEN -->
+      <section class="proj" data-slider>
         <div class="proj-head">
-          <div>
-            <h3>Kitchen Remodel</h3>
-            <p class="proj-meta">Cabinetry, layout redesign, appliance integration</p>
-          </div>
+          <h3>Kitchen Remodel</h3>
         </div>
 
-        <div class="slider" data-slider>
-          <button class="slider-btn prev" type="button" aria-label="Previous slide" data-prev>‹</button>
+        <div class="slider">
+          <button class="slider-btn prev" data-prev>‹</button>
 
           <div class="slider-track" data-track>
-            <img src="assets/projects/resi-kitchen-01.jpg" alt="Kitchen remodel 1">
-            <img src="assets/projects/resi-kitchen-02.jpg" alt="Kitchen remodel 2">
-            <img src="assets/projects/resi-kitchen-03.jpg" alt="Kitchen remodel 3">
-            <img src="assets/projects/resi-kitchen-04.jpg" alt="Kitchen remodel 4">
-            <img src="assets/projects/resi-kitchen-05.jpg" alt="Kitchen remodel 5">
-            <img src="assets/projects/resi-kitchen-06.jpg" alt="Kitchen remodel 6">
-            <img src="assets/projects/resi-kitchen-07.jpg" alt="Kitchen remodel 7">
-            <img src="assets/projects/resi-kitchen-08.jpg" alt="Kitchen remodel 8">
-            <img src="assets/projects/resi-kitchen-09.jpg" alt="Kitchen remodel 9">
-            <img src="assets/projects/resi-kitchen-10.jpg" alt="Kitchen remodel 10">
+            <img src="assets/projects/resi-kitchen-01.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-02.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-03.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-04.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-05.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-06.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-07.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-08.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-09.jpg" alt="">
+            <img src="assets/projects/resi-kitchen-10.jpg" alt="">
           </div>
 
-          <button class="slider-btn next" type="button" aria-label="Next slide" data-next>›</button>
+          <button class="slider-btn next" data-next>›</button>
         </div>
       </section>
 
@@ -178,23 +163,7 @@
     </div>
   </footer>
 
-  <!-- Slider JS (built-in, no other files needed) -->
-  <script>
-    document.querySelectorAll('[data-slider]').forEach((slider) => {
-      const track = slider.querySelector('[data-track]');
-      const prev = slider.querySelector('[data-prev]');
-      const next = slider.querySelector('[data-next]');
+  <script src="projects.js"></script>
 
-      const scrollAmount = () => track.clientWidth; // one full image width
-
-      prev.addEventListener('click', () => {
-        track.scrollBy({ left: -scrollAmount(), behavior: 'smooth' });
-      });
-
-      next.addEventListener('click', () => {
-        track.scrollBy({ left: scrollAmount(), behavior: 'smooth' });
-      });
-    });
-  </script>
 </body>
 </html>
